pff 4.7.14, 2018-02-21
----------------------
- Refactoring removed the additional layer JdbcSearchSupport on SearchProcessor 

pff 4.7.14, 2018-02-15
----------------------
- Refactoring jdbc search

pff 4.7.14, 2018-02-14
----------------------
- Moved AbstractEntity.java and AbstractWorkflowEntity.java from com.pennanttech.pff.core.model to com.pennanttech.pennapps.core.model package
- Upgraded pennapps-core version from 0.7.2 to 0.7.3
- Upgraded pennapps-web version from 0.4.1 to 0.4.2

pff 4.7.14, 2018-02-14
----------------------
- Integrate the License validation functionality.

pff 4.7.11, 2018-02-13
---------------------
- Moved LoggedInUser.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package
- Moved ErrorDetail.java from com.pennant.backend.model to com.pennanttech.pennapps.core.model package

pff 4.1.0, 2018-01-26
---------------------
- Refactoring Rename bean ErrorDetails from ErrorDetails to ErrorDetail.
- Refactoring Remove the prefix Error from the ErrorDetail properties.
- Refactoring Alter columns in tables and view's including audit.

pff 4.1.0, 2018-01-09
---------------------
Cache enabled for ErrorDetails and SystemParameter service classes.

pff 4.1.0, 2018-01-06
---------------------
- Refactoring renamed the application Datasoure and the corresponding TransactionManager(pfsDatasource and pfsTransactionManager) bean Id's to datasource and transactionManager
- Refactoring removed the ErrorDetail class and used the ErrorDetails on behalf of ErrorDetail.   

pff 4.1.0, 2017-12-22
---------------------
- Merged Reason Category Master code from Base/MLOD to Base/Trunk
- Merged Reason Code Master code from Base/MLOD to Base/Trunk
- Merged Reason Type Master code from Base/MLOD to Base/Trunk

pff 4.1.0, 2017-12-21
---------------------
1.	DMS Integration.
2.	CIBIL Integration.
3.	New Tab for CIBIL Integration.
4.	Mandate registration request.
5.	Mandate registration response.
6.	Update loan changes.